--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/starlight": "^0.28.5",
     "astro": "^4.15.3",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.9.4",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0"
   }
 }
